--- a/debian/config/arm64/config
+++ b/debian/config/arm64/config
@@ -1626,3 +1626,4 @@ CONFIG_CEC_MESON_G12A_AO=m
 CONFIG_VIDEO_ROCKCHIP_VDEC=m
 CONFIG_PM_DEVFREQ=y
 CONFIG_ARM_RK3399_DMC_DEVFREQ=m
+CONFIG_DEVFREQ_GOV_SIMPLE_ONDEMAND=y
