--- a/debian/config/arm64/config
+++ b/debian/config/arm64/config
@@ -1535,26 +1535,19 @@ CONFIG_SND_SOC_TEGRA_RT5677=m
 ##
 ## Armbian config
 ##
-CONFIG_ARM64_SW_TTBR0_PAN=y
 CONFIG_ARM_PSCI_CPUIDLE=y
 CONFIG_ARM_SCPI_CPUFREQ=m
 CONFIG_ARM_SCPI_PROTOCOL=m
 CONFIG_ARM_SCPI_POWER_DOMAIN=m
-CONFIG_CRYPTO_SHA3_ARM64=m
 CONFIG_CRYPTO_SM3_ARM64_CE=m
 CONFIG_CRYPTO_SM4_ARM64_CE=m
 CONFIG_CRYPTO_NHPOLY1305_NEON=m
-CONFIG_CRYPTO_AES_ARM64_BS=m
-CONFIG_PGTABLE_MAPPING=y
-CONFIG_PCI_MESON=y
-CONFIG_OF_RESOLVE=y
+CONFIG_PCI_MESON=m
 CONFIG_OF_OVERLAY=y
-CONFIG_KEYBOARD_ADC=m
 CONFIG_INPUT_RK805_PWRKEY=m
 CONFIG_SPI_PL022=m
 CONFIG_PINCTRL_RK805=m
 CONFIG_GPIO_SYSCON=m
-CONFIG_SENSORS_PWM_FAN=m
 CONFIG_VIDEO_ROCKCHIP_RGA=m
 CONFIG_CEC_PLATFORM_DRIVERS=y
 CONFIG_VIDEO_MESON_AO_CEC=m
@@ -1587,7 +1580,7 @@ CONFIG_SND_SOC_RK3288_HDMI_ANALOG=m
 CONFIG_MMC_MESON_MX_SDIO=m
 CONFIG_LEDS_SYSCON=y
 CONFIG_LEDS_MLXREG=m
-CONFIG_LEDS_USER=y
+CONFIG_LEDS_USER=m
 CONFIG_LEDS_TRIGGER_ACTIVITY=m
 CONFIG_RTC_DRV_ISL12026=m
 CONFIG_RTC_DRV_HYM8563=m
@@ -1595,14 +1588,11 @@ CONFIG_PHY_ROCKCHIP_DPHY_RX0=m
 CONFIG_VIDEO_ROCKCHIP_ISP1=m
 CONFIG_COMMON_CLK_SCPI=m
 CONFIG_COMMON_CLK_PWM=m
-CONFIG_COMMON_CLK_MESON_PHASE=y
-CONFIG_COMMON_CLK_MESON_SCLK_DIV=y
-CONFIG_COMMON_CLK_AXG_AUDIO=y
-CONFIG_ARM_MHU=y
-CONFIG_PLATFORM_MHU=y
-CONFIG_ROCKCHIP_MBOX=y
-CONFIG_RESET_MESON_AUDIO_ARB=y
-CONFIG_CRYPTO_SM4=m
+CONFIG_PLATFORM_MHU=m
+CONFIG_COMMON_CLK_MESON_PHASE=m
+CONFIG_COMMON_CLK_MESON_SCLK_DIV=m
+CONFIG_COMMON_CLK_AXG_AUDIO=m
+CONFIG_RESET_MESON_AUDIO_ARB=m
 CONFIG_CRYPTO_DEV_ROCKCHIP=m
 CONFIG_RFKILL_GPIO=m
 CONFIG_SYSTEM_TRUSTED_KEYS="debian/certs/kernel_key.pem"
@@ -1610,17 +1600,9 @@ CONFIG_STAGING_MEDIA=y
 CONFIG_VIDEO_HANTRO=m
 CONFIG_VIDEO_HANTRO_ROCKCHIP=y
 CONFIG_VIDEO_MESON_VDEC=m
-CONFIG_PHY_ROCKCHIP_DPHY_RX0=m
-CONFIG_VIDEO_ROCKCHIP_ISP1=m
-CONFIG_REGULATOR_FAN53555=y
-CONFIG_REGULATOR_GPIO=y
-CONFIG_REGULATOR_FIXED_VOLTAGE=y
-CONFIG_MFD_RK808=y
-CONFIG_REGULATOR_PWM=y
-CONFIG_REGULATOR_RK808=y
+CONFIG_REGULATOR_FAN53555=m
 CONFIG_MEDIA_CONTROLLER_REQUEST_API=y
 CONFIG_VIDEO_V4L2_SUBDEV_API=y
-CONFIG_PWM_ROCKCHIP=y
 CONFIG_MFD_KHADAS_MCU=m
 CONFIG_KHADAS_MCU_FAN_THERMAL=m
 CONFIG_IR_GPIO_CIR=m
@@ -1628,6 +1610,3 @@ CONFIG_SENSORS_ARM_SCPI=m
 CONFIG_CEC_MESON_AO=m
 CONFIG_CEC_MESON_G12A_AO=m
 CONFIG_VIDEO_ROCKCHIP_VDEC=m
-CONFIG_PM_DEVFREQ=y
-CONFIG_ARM_RK3399_DMC_DEVFREQ=m
-CONFIG_DEVFREQ_GOV_SIMPLE_ONDEMAND=y
