disable some DRM device to speedup build
Signed-off-by: Zhang Ning <832666+zhangn1985@users.noreply.github.com>

--- a/debian/config/arm64/config
+++ b/debian/config/arm64/config
@@ -1623,3 +1623,9 @@ CONFIG_SENSORS_ARM_SCPI=m
 CONFIG_CEC_MESON_AO=m
 CONFIG_CEC_MESON_G12A_AO=m
 CONFIG_VIDEO_ROCKCHIP_VDEC=m
+
+### disable some config speedup build
+# CONFIG_DRM_I915 is not set
+# CONFIG_DRM_RADEON is not set
+# CONFIG_DRM_AMDGPU is not set
+# CONFIG_DRM_NOUVEAU is not set
