update define and config
Signed-off-by: Zhang Ning <832666+zhangn1985@users.noreply.github.com>

--- a/debian/config/arm64/config
+++ b/debian/config/arm64/config
@@ -1592,6 +1592,7 @@ CONFIG_CRYPTO_SM4_ARM64_CE=m
 CONFIG_CRYPTO_NHPOLY1305_NEON=m
 CONFIG_PCI_MESON=m
 CONFIG_INPUT_RK805_PWRKEY=m
+CONFIG_KEYBOARD_GPIO_POLLED=m
 CONFIG_SPI_PL022=m
 CONFIG_PINCTRL_RK805=m
 CONFIG_GPIO_SYSCON=m
@@ -1638,7 +1639,6 @@ CONFIG_COMMON_CLK_AXG_AUDIO=m
 CONFIG_RESET_MESON_AUDIO_ARB=m
 CONFIG_CRYPTO_DEV_ROCKCHIP=m
 CONFIG_RFKILL_GPIO=m
-CONFIG_SYSTEM_TRUSTED_KEYS="debian/certs/kernel_key.pem"
 CONFIG_VIDEO_HANTRO=m
 CONFIG_VIDEO_MESON_VDEC=m
 CONFIG_REGULATOR_FAN53555=m
